--- a/server/package.json
+++ b/server/package.json
@@ -19,5 +19,17 @@
   "bugs": {
     "url": "https://github.com/ProkingK/Connectify/issues"
   },
-  "homepage": "https://github.com/ProkingK/Connectify#readme"
+  "homepage": "https://github.com/ProkingK/Connectify#readme",
+  "type": "module",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "gridfs-stream": "^1.1.1",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.4",
+    "morgan": "^1.10.0"
+  }
 }
