--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dropzone": "^14.2.3",
     "react-redux": "^8.1.2",
     "react-router": "^6.15.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4",
